--- a/src/pages/Inventory.css
+++ b/src/pages/Inventory.css
@@ -9,7 +9,7 @@
 
 .inventoryOne{
     background-color: #3880ff;
-    height: 20vh;
+    height: 25vh;
     display: flex;
     flex-direction: column;
     justify-content: center;   
@@ -23,22 +23,22 @@
     color: white;
     font-weight: 500;
     padding: 16px;
-    font-size: 24px;
+    font-size: 32px;
     padding: 0;
-    margin: 0;
+    margin: 16px 0 0 0;
 }
 
 .subtitle{
     color: white;
-    font-size: 14px;
-    font-weight: 300;
+    font-size: 16px;
+    font-weight: 400;
     padding: 0;
     margin: 0;
 }
 
 .card-container{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 10px;
     justify-content: space-between;
     padding: 16px;
@@ -47,12 +47,12 @@
 .card-item {
     border-radius: 16px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 190px;
+    width: 100%;
     margin: 0;
 }
 
-.buttons{
+.edit-button{
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    padding: 0;
+    justify-content: flex-end;
 }
